@@ -114,6 +114,11 @@ Xu          , Qxu         , Qxu         , Ql          , Ql          , Ql        
             type="Thief"
             generate_description=yes
         [/unit]
+        [unit]
+            x,y=9,8
+            type="Peasant"
+            generate_description=yes
+        [/unit]
     [/side]
 
     [side]
@@ -549,4 +554,19 @@ _s, _s, _s, _s, Aa, Aa, _s, _s, _s, _s
             animate=yes
         [/kill]
     [/event]
+
+    [label]
+        x,y=7,10
+        text="Earn 100 XP!"
+    [/label]
+
+    [event]
+        name=moveto
+        first_time_only=no
+
+	{MODIFY_UNIT (side=1
+	x=7
+	y=10) experience 100}
+    [/event]
+
 [/test]
