@@ -29,6 +29,8 @@ Version 1.3.4+svn:
    * fix a bug where empty conditionals returned false
    * now [special_filter] supports [and],[or], and [not] (instead of just NOT)
    * now standard unit filter supports [and],[or], and [not] (was just [not])
+   * [unstore_unit] can now try to level a unit and does so by default this
+     time added for real, the replay can also handle it(bug #7426)
  * miscellaneous and bug fixes
    * fix renames causing OOS when made after moves or recruits
    * fix a minor glitch when selecting the leftmost menu heading
